Pre rich text editor

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenLocal()
+        jcenter()
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
@@ -8,6 +9,9 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.8"
     }
+}
+plugins {
+    id 'com.craigburke.client-dependencies' version '1.4.0'
 }
 
 version "0.1"
@@ -78,4 +82,9 @@ tasks.withType(Test) {
 assets {
     minifyJs = true
     minifyCss = true
+}
+clientDependencies {
+    npm {
+        'summernote'('*')
+    }
 }
